# OSIP

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Masterplan.md  README.md  SECURITY.md  docker-compose.yml  osip_autonomie.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapters.md  benchmark-runner.md  bus-spec.md  context-engine.md  core-concept.md  decision-runtime.md  emergent-autonomy.md  gateway-api.md  learned-fusion.md  learning-layer.md  model-plugins.md  osip-spec.md  project-preparation.md  safety-watchdog.md  scenario-replay.md  sensor-adapters.md
docs/applications/: physical-ai.md  profile-template.md  rooms.md
docs/results/: latest.json  latest.md
protocols/asyncapi/: asyncapi.json
protocols/openapi/: openapi.json
protocols/schemas/: action_command.schema.json  action_contract.schema.json  action_proposal.schema.json  action_result.schema.json  adapter_heartbeat.schema.json  context_update.schema.json  event_detected.schema.json  model_capability.schema.json  percept_packet.schema.json  profile_safety_case.schema.json
scenarios/: fall_candidate.yaml  kitchen_burning_food.yaml  normal_cooking_no_alarm.yaml  sensor_conflict_smoke.yaml  stale_air_high_occupancy.yaml
scripts/: check_benchmark_publication.py  dev_env_check.py  export_asyncapi.py  export_openapi.py  export_osip_schemas.py  run_benchmark.py
tests/: test_dev_environment.py
tests/contract/: test_asyncapi_export.py  test_ci_workflow.py  test_makefile_targets.py  test_osip_json_schema_export.py
tests/integration/: test_gateway_api.py  (+7 more)
(+38 files in other folders)
