[project]
name = "omnisense-runtime"
version = "0.1.0"
description = "Open, modular, simulation-first Perception-to-Action runtime built around OSIP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.3,<3",
    "anyio>=4.4,<5",
    "cloudevents>=1.11,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "jsonschema>=4.23,<5",
    "nats-py>=2.8,<3",
    "opentelemetry-api>=1.29,<2",
    "opentelemetry-sdk>=1.29,<2",
    "orjson>=3.10,<4",
    "prometheus-client>=0.21,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6.0.2,<7",
    "uvicorn[standard]>=0.32,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
    "types-pyyaml>=6.0.12,<7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages", "scripts", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ASYNC",
    "S",
]
ignore = [
    "S101",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
files = ["packages", "scripts", "tests"]

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true
